# career-ops

./: .career-ops-render-16438226-013a-4a6e-bd41-2cf36333b414.html  .cursorignore  .cursorrules  .dockerignore  .env.example  .env.mail.example  .eslintrc.json  .firebaserc  .gcloudignore  .gitattributes  .gitignore  .lighthouserc.js  .mcp.json  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  AUTO-APPLY-COMPLETE.md  AUTO-APPLY-IMPLEMENTATION.md  AUTO-APPLY.md  BUGS.md  BW_CV_FORMATTING_SPEC.md  CHANGELOG-FR.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLAUDE.md.pre-update.bak  CLI-GUIDE.md  CODEX.md  COMIENZA-AQUI.md  CONTRIBUTING.md  CONTRIBUTORS.md  CV-ed-analysis.md  CV-ed-report.md  CV-ed.md  DASHBOARD_INVARIANTS.md  DATA_CONTRACT.md  DEPLOYMENT.md  DESIGN.md  DESIGN_PRINCIPLES.md  DOCKER.md  (+506 more)
scripts/python/: ARCHITECTURE.md  INDEX.md  README.md  __init__.py  pyproject.toml
scripts/python/admin/: __main__.py  analyze_patterns.py  cv_sync_check.py  doctor.py  manifesto.py  stats.py  test_all.py  update_system.py  upskill.py  validate_paths.py  validate_portals.py  verify_portals.py
scripts/python/cv/: __main__.py
scripts/python/docs/: admin.md  cli-bridge.md  cv.md  evaluation.md  export.md  interview.md  other.md  pipeline.md  plugins.md  reply.md  salary.md  scanner.md  testing.md  tracker.md
scripts/python/evaluation/: __main__.py  eval_golden.py  gemini_eval.py  jd_skill_gap.py  ollama_eval.py  openai_eval.py  openai_tailor.py
scripts/python/export/: __main__.py  build_dashboard.py
scripts/python/interview/: __main__.py  match_star.py
(+5408 files in other folders)
