[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-ops-scripts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pyyaml>=6,<7",
  "python-dotenv>=1.0,<2",
  "httpx>=0.27,<1",
  "playwright>=1.49,<2",
  "openai>=1.50,<2",
  "google-genai>=1.0,<2",
  "rapidfuzz>=3,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "admin*",
  "cv*",
  "evaluation*",
  "export*",
  "interview*",
  "other*",
  "pipeline*",
  "plugins*",
  "reply*",
  "salary*",
  "scanner*",
  "tracker*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../.."]
